packages/dartcv/src/imgproc/imgproc.h

// Applies a separable linear filter to an image.
// void cv::sepFilter2D (InputArray src, OutputArray dst, int ddepth, InputArray kernelX, InputArray kernelY, CvPoint anchor=CvPoint(-1,-1), double delta=0, int borderType=BORDER_DEFAULT)
CvStatus* cv_sepFilter2D(
    Mat src,
    Mat dst,
    int ddepth,
    Mat kernelX,
    Mat kernelY,
    CvPoint anchor,
    double delta,
    int borderType,
    CvCallback_0 callback
);
// Calculates the first order image derivative in both x and y using a cv_Sobel operator.
// void cv::spatialGradient (InputArray src, OutputArray dx, OutputArray dy, int ksize=3, int borderType=BORDER_DEFAULT)
CvStatus* cv_spatialGradient(
    Mat src, Mat dx, Mat dy, int ksize, int borderType, CvCallback_0 callback
);
// Calculates the normalized sum of squares of the pixel values overlapping the filter.
// void cv::sqrBoxFilter (InputArray src, OutputArray dst, int ddepth, CvSize ksize, CvPoint anchor=CvPoint(-1, -1), bool normalize=true, int borderType=BORDER_DEFAULT)
CvStatus* cv_sqrBoxFilter(
    Mat src,
    Mat dst,
    int ddepth,
    CvSize ps,
    CvPoint anchor,
    bool normalize,
    int borderType,
    CvCallback_0 callback
);
// Applies an affine transformation to an image.
// void cv::warpAffine (InputArray src, OutputArray dst, InputArray M, CvSize dsize, int flags=INTER_LINEAR, int borderMode=BORDER_CONSTANT, const Scalar &borderValue=Scalar())
CvStatus* cv_warpAffine(Mat src, Mat dst, Mat rot_mat, CvSize dsize, CvCallback_0 callback);
CvStatus* cv_warpAffine_1(
    Mat src,
    Mat dst,
    Mat rot_mat,
    CvSize dsize,
    int flags,
    int borderMode,
    Scalar borderValue,
    CvCallback_0 callback
);
// Applies a perspective transformation to an image.
// void cv::warpPerspective (InputArray src, OutputArray dst, InputArray M, CvSize dsize, int flags=INTER_LINEAR, int borderMode=BORDER_CONSTANT, const Scalar &borderValue=Scalar())
CvStatus* cv_warpPerspective(Mat src, Mat dst, Mat m, CvSize dsize, CvCallback_0 callback);
CvStatus* cv_warpPerspective_1(
    Mat src,
    Mat dst,
    Mat rot_mat,
    CvSize dsize,
    int flags,
    int borderMode,
    Scalar borderValue,
    CvCallback_0 callback
);
// Applies a fixed-level threshold to each array element.
// double cv::threshold (InputArray src, OutputArray dst, double thresh, double maxval, int type)
CvStatus* cv_threshold(
    Mat src, Mat dst, double thresh, double maxvalue, int typ, double* rval, CvCallback_0 callback
);
void cv_Subdiv2D_close(Subdiv2DPtr self);
void cv_CLAHE_close(CLAHEPtr self);
// Performs a marker-based image segmentation using the watershed algorithm.
// void cv::watershed (InputArray image, InputOutputArray markers)
CvStatus* cv_watershed(Mat image, Mat markers, CvCallback_0 callback);