lib/src/g/imgproc.g.dart


@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, Mat, Mat, CvPoint,
        ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_sepFilter2D(
  Mat src,
  Mat dst,
  int ddepth,
  Mat kernelX,
  Mat kernelY,
  CvPoint anchor,
  double delta,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_spatialGradient(
  Mat src,
  Mat dx,
  Mat dy,
  int ksize,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, CvSize, CvPoint, ffi.Bool,
        ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_sqrBoxFilter(
  Mat src,
  Mat dst,
  int ddepth,
  CvSize ps,
  CvPoint anchor,
  bool normalize,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Double, ffi.Int,
        ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_threshold(
  Mat src,
  Mat dst,
  double thresh,
  double maxvalue,
  int typ,
  ffi.Pointer<ffi.Double> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, CvSize, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_warpAffine(
  Mat src,
  Mat dst,
  Mat rot_mat,
  CvSize dsize,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, CvSize, ffi.Int, ffi.Int, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_warpAffine_1(
  Mat src,
  Mat dst,
  Mat rot_mat,
  CvSize dsize,
  int flags,
  int borderMode,
  Scalar borderValue,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, CvSize, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_warpPerspective(
  Mat src,
  Mat dst,
  Mat m,
  CvSize dsize,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, CvSize, ffi.Int, ffi.Int, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_warpPerspective_1(
  Mat src,
  Mat dst,
  Mat rot_mat,
  CvSize dsize,
  int flags,
  int borderMode,
  Scalar borderValue,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_watershed(
  Mat image,
  Mat markers,
  imp1.CvCallback_0 callback,
);

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(CLAHEPtr)>>
      get cv_CLAHE_close => ffi.Native.addressOf(self.cv_CLAHE_close);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(Subdiv2DPtr)>>
      get cv_Subdiv2D_close => ffi.Native.addressOf(self.cv_Subdiv2D_close);
}

final class CLAHE extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef CLAHEPtr = ffi.Pointer<CLAHE>;
typedef CvPoint = imp1.CvPoint;
typedef CvPoint2f = imp1.CvPoint2f;
typedef CvRect = imp1.CvRect;
typedef CvSize = imp1.CvSize;
typedef CvStatus = imp1.CvStatus;
typedef Mat = imp1.Mat;
typedef Moment = imp1.Moment;
typedef RotatedRect = imp1.RotatedRect;
typedef Scalar = imp1.Scalar;

final class Subdiv2D extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef Subdiv2DPtr = ffi.Pointer<Subdiv2D>;
typedef TermCriteria = imp1.TermCriteria;
typedef Vec4f = imp1.Vec4f;
typedef Vec6f = imp1.Vec6f;
typedef VecF32 = imp1.VecF32;
typedef VecI32 = imp1.VecI32;
typedef VecMat = imp1.VecMat;
typedef VecPoint = imp1.VecPoint;
typedef VecPoint2f = imp1.VecPoint2f;
typedef VecVec4i = imp1.VecVec4i;
typedef VecVecPoint = imp1.VecVecPoint;
typedef VecVecPoint2f = imp1.VecVecPoint2f;
